fixed menu collapsed

--- a/lesson4/css/small-4.css
+++ b/lesson4/css/small-4.css
@@ -87,12 +87,18 @@ nav {
 	font-weight: 700;
 }
 
-/* the onclick JS toggles the .repsonsive class from display none (.navigation li) to display block because the repsonsive class is added to the end of the class list like this in HTML Line #6.
+/* the onclick JS toggles the .repsonsive class from display none (.navigation li) 
+to display block because the repsonsive class is added to the end of the class list 
+like this in HTML Line #6.
   <ul class="navigation responsive">
   */
-.navigation li {
+/* .navigation li {
+	display: block;
+} */
+.responsive li {
 	display: block;
 }
+
 /* *********************************** */
 
 .contentbox {
